--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -19,15 +19,18 @@
       <!-- <li class="nav-item active">
           <a class="nav-link" href="/bill/trans">Transactions <span class="sr-only">(current)</span></a>
         </li> -->
-        <li class="nav-item active">
-          <a class="nav-link" href="/order/trans/0">Orders <span class="sr-only">(current)</span></a>
-        </li>
-        <li class="nav-item active">
-            <a class="nav-link" href="/order/trans/1">Delivered <span class="sr-only">(current)</span></a>
-          </li>
-          <li class="nav-item active">
-              <a class="nav-link" href="/order/trans/2">Cancel <span class="sr-only">(current)</span></a>
-            </li>
+      <li class="nav-item active">
+        <a class="nav-link" href="/order/trans/0">Orders <span class="sr-only">(current)</span></a>
+      </li>
+      <li class="nav-item active">
+        <a class="nav-link" href="/order/trans/1">Delivered <span class="sr-only">(current)</span></a>
+      </li>
+      <li class="nav-item active">
+        <a class="nav-link" href="/order/trans/2">Cancel <span class="sr-only">(current)</span></a>
+      </li>
+      <li class="nav-item active">
+        <a class="nav-link" href="/shop/logout">Logout <span class="sr-only">(current)</span></a>
+      </li>
     </ul>
 
   </div>
