--- a/views/order.ejs
+++ b/views/order.ejs
@@ -149,7 +149,8 @@
 </head>
 
 <body>
-    <h1 align="center">Make Bill</h1>
+        <% include  partials/coustomerNav%>
+        <h1 align="center">Make Bill</h1>
     <div class="row">
 
         <div class="col col-md-6">
