--- a/views/order.ejs
+++ b/views/order.ejs
@@ -173,8 +173,13 @@
             tprice = 0
             for (i = 0; i < arr.length; i++) {
                 if (arr[i].quantity == 0) {
+                    
                     arr.splice(i, 1)
                 }
+                if(arr[i].available<0){
+                        alert(`cannot add ${arr[i].name} please use less value`)
+                        arr.splice(i, 1)
+                    }
             }
             for (i = 0; i < arr.length; i++) {
                 tprice += arr[i].quantity * arr[i].price
