--- a/views/showshop.ejs
+++ b/views/showshop.ejs
@@ -23,9 +23,9 @@ h3{
 }
 
 .box-part{
-    background:#FFF;
+    background:rgb(211, 191, 191);
     border-radius:10px;
-    padding:60px 10px;
+    padding:30px 10px;
     margin:30px 0px;
 }
 
