--- a/views/login.ejs
+++ b/views/login.ejs
@@ -2,125 +2,160 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Login</title>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta http-equiv="X-UA-Compatible" content="ie=edge">
+	<title>Login</title>
 </head>
 
 <body>
- 
-        
-        
+
+
+
 </body>
+
 </html>
 
 
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-<meta charset="utf-8">
-<meta http-equiv="X-UA-Compatible" content="IE=edge">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Bootstrap Login Form with Avatar Image</title>
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script> 
-<style type="text/css">
-	body {
-		color: #fff;
-		background: #d47677;
-	}
-	.form-control {
-        min-height: 41px;
-		background: #fff;
-		box-shadow: none !important;
-		border-color: #e3e3e3;
-	}
-	.form-control:focus {
-		border-color: #70c5c0;
-	}
-    .form-control, .btn {        
-        border-radius: 2px;
-    }
-	.login-form {
-		width: 350px;
-		margin: 0 auto;
-		padding: 100px 0 30px;		
-	}
-	.login-form form {
-		color: #7a7a7a;
-		border-radius: 2px;
-    	margin-bottom: 15px;
-        font-size: 13px;
-        background: #ececec;
-        box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
-        padding: 30px;	
-        position: relative;	
-    }
-	.login-form h2 {
-		font-size: 22px;
-        margin: 35px 0 25px;
-    }
-	.login-form .avatar {
-		position: absolute;
-		margin: 0 auto;
-		left: 0;
-		right: 0;
-		top: -50px;
-		width: 95px;
-		height: 95px;
-		border-radius: 50%;
-		z-index: 9;
-		background: #70c5c0;
-		padding: 15px;
-		box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.1);
-	}
-	.login-form .avatar img {
-		width: 100%;
-	}	
-    .login-form input[type="checkbox"] {
-        margin-top: 2px;
-    }
-    .login-form .btn {        
-        font-size: 16px;
-        font-weight: bold;
-		background: #70c5c0;
-		border: none;
-		margin-bottom: 20px;
-    }
-	.login-form .btn:hover, .login-form .btn:focus {
-		background: #50b8b3;
-        outline: none !important;
-	}    
-	.login-form a {
-		color: #fff;
-		text-decoration: underline;
-	}
-	.login-form a:hover {
-		text-decoration: none;
-	}
-	.login-form form a {
-		color: #7a7a7a;
-		text-decoration: none;
-	}
-	.login-form form a:hover {
-		text-decoration: underline;
-	}
-</style>
+	<meta charset="utf-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<title>Login Form </title>
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+		integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+		integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+		crossorigin="anonymous"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+		integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+		crossorigin="anonymous"></script>
+	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+		integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+		crossorigin="anonymous"></script>
+	<style type="text/css">
+		body {
+			color: #fff;
+			background: #d47677;
+		}
+
+		.form-control {
+			min-height: 41px;
+			background: #fff;
+			box-shadow: none !important;
+			border-color: #e3e3e3;
+		}
+
+		.form-control:focus {
+			border-color: #70c5c0;
+		}
+
+		.form-control,
+		.btn {
+			border-radius: 2px;
+		}
+
+		.login-form {
+			width: 350px;
+			margin: 0 auto;
+			padding: 100px 0 30px;
+		}
+
+		.login-form form {
+			color: #7a7a7a;
+			border-radius: 2px;
+			margin-bottom: 15px;
+			font-size: 13px;
+			background: #ececec;
+			box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
+			padding: 30px;
+			position: relative;
+		}
+
+		.login-form h2 {
+			font-size: 22px;
+			margin: 35px 0 25px;
+		}
+
+		.login-form .avatar {
+			position: absolute;
+			margin: 0 auto;
+			left: 0;
+			right: 0;
+			top: -50px;
+			width: 95px;
+			height: 95px;
+			border-radius: 50%;
+			z-index: 9;
+			background: #70c5c0;
+			padding: 15px;
+			box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.1);
+		}
+
+		.login-form .avatar img {
+			width: 100%;
+		}
+
+		.login-form input[type="checkbox"] {
+			margin-top: 2px;
+		}
+
+		.login-form .btn {
+			font-size: 16px;
+			font-weight: bold;
+			background: #70c5c0;
+			border: none;
+			margin-bottom: 20px;
+		}
+
+		.login-form .btn:hover,
+		.login-form .btn:focus {
+			background: #50b8b3;
+			outline: none !important;
+		}
+
+		.login-form a {
+			color: #fff;
+			text-decoration: underline;
+		}
+
+		.login-form a:hover {
+			text-decoration: none;
+		}
+
+		.login-form form a {
+			color: #7a7a7a;
+			text-decoration: none;
+		}
+
+		.login-form form a:hover {
+			text-decoration: underline;
+		}
+		.product{
+			/* background-color: #fff; */
+			padding-bottom: 5px
+		}
+	</style>
 </head>
+
 <body>
-<div class="login-form">
-        
-          
-                <%if(data==1){%>
-    <form action="/shop/login" method="post">
-        <%} else if(data==0){%>
-            <form action="/coustomer/login" method="post">
-                <%}%>
+
+	<div class="login-form">
+
+
+		<%if(data==1){%>
+		<form action="/shop/login" method="post">
+			<%} else if(data==0){%>
+			<form action="/coustomer/login" method="post">
+				<%}%>
 		<div class="avatar">
-			<!-- <img src="/examples/images/avatar.png" alt="Avatar"> -->
+			<img src="/static/Yantranant LOGO-01.png" alt="Avatar">
 		</div>
         <h2 class="text-center">Member Login</h2>   
         <div class="form-group">
@@ -136,7 +171,35 @@
             <label class="pull-left checkbox-inline"><input type="checkbox"> Remember me</label>
             <a href="#" class="pull-right">Forgot Password?</a>
         </div>
-    </form>
+	</form>
+	<div class="row">
+		<div class="col col-sm-4">
+		<img src="/static/1565253651765.jpeg" width="50px">
+		</div>
+		<div class="col col-sm-4">
+		<img src="/static/1565178931366.jpeg" width="50px">
+		</div>
+		<div class="col col-sm-4">
+<img src="/static/1565179097360.png" width="50px">
+</div>
+<div class="col product col-sm-4 my-auto">
+		<img src="/static/1565253613714.png" width="50px">
+		</div>
+		<div class="col product col-sm-4">
+				<img src="/static/1565258451601.jpeg" width="50px">
+				</div>
+				<div class="col product col-sm-4">
+						<img src="/static/1565258340375.jpeg" width="50px">
+						</div>
+						<div class="col product col-sm-4">
+								<img src="/static/1565333495630.jpg" width="50px">
+								</div>
+								<div class="col product col-sm-4">
+										<img src="/static/1565258491157.jpg" width="50px">
+										</div>
+				
+		
+	</div>
     <!-- <p class="text-center small">Don't have an account? <a href="#">Sign up here!</a></p> -->
 </div>
 </body>
