--- a/views/order.ejs
+++ b/views/order.ejs
@@ -152,7 +152,7 @@
                     // ++document.getElementById(`inp${id}`).value
 
                     arr[p].quantity = document.getElementById(`inp${id}`).value
-                    alert("can  add more")
+                    // alert("can  add more")
 
                 }
             }
