--- a/views/showshop.ejs
+++ b/views/showshop.ejs
@@ -7,60 +7,60 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Show Shop</title>
     <style>
-       @import url('https://fonts.googleapis.com/css?family=Josefin+Sans:100,300,400,600,700');
+        @import url('https://fonts.googleapis.com/css?family=Josefin+Sans:100,300,400,600,700');
 
-body{
-    background: #f2f2f2;
-    font-family: 'Josefin Sans', sans-serif;
-}
+        body {
+            background: #f2f2f2;
+            font-family: 'Josefin Sans', sans-serif;
+        }
 
-h3{
-     font-family: 'Josefin Sans', sans-serif;
-}
+        h3 {
+            font-family: 'Josefin Sans', sans-serif;
+        }
 
-.box{
-    padding:60px 0px;
-}
+        .box {
+            padding: 5px 0px;
+        }
 
-.box-part{
-    background:rgb(211, 191, 191);
-    border-radius:10px;
-    padding:30px 10px;
-    margin:30px 0px;
-}
+        .box-part {
+            background: rgb(211, 191, 191);
+            border-radius: 10px;
+            padding: 30px 10px;
+            margin: 30px 0px;
+        }
 
-.box-part:hover{
-    background:#4183D7;
-}
+        .box-part:hover {
+            background: #4183D7;
+        }
 
-.box-part:hover .fa , 
-.box-part:hover .title , 
-.box-part:hover .text ,
-.box-part:hover a{
-    color:#FFF;
-    -webkit-transition: all 1s ease-out;
-    -moz-transition: all 1s ease-out;
-    -o-transition: all 1s ease-out;
-    transition: all 1s ease-out;
-}
+        .box-part:hover .fa,
+        .box-part:hover .title,
+        .box-part:hover .text,
+        .box-part:hover a {
+            color: #FFF;
+            -webkit-transition: all 1s ease-out;
+            -moz-transition: all 1s ease-out;
+            -o-transition: all 1s ease-out;
+            transition: all 1s ease-out;
+        }
 
-.text{
-    margin:20px 0px;
-}
+        .text {
+            margin: 20px 0px;
+        }
 
-.fa{
-     color:#4183D7;
-}
+        .fa {
+            color: rgb(215, 65, 65);
+        }
     </style>
 
-<link href="//netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
-<script src="//netdna.bootstrapcdn.com/bootstrap/3.0.3/js/bootstrap.min.js"></script>
-<script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-<!------ Include the above in your HEAD tag ---------->
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
-integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <link href="//netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
+    <script src="//netdna.bootstrapcdn.com/bootstrap/3.0.3/js/bootstrap.min.js"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <!------ Include the above in your HEAD tag ---------->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
+        integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 
-<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"> 
+    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
 
 </head>
 
@@ -70,51 +70,86 @@ integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6J
 
 
 
-<!--
+    <!--
     instagram: www.instagram.com/programmingtutorial
     site: programlamadersleri.net
 -->
+    <center>
+        <h3>Choose Shops
+        </h3>
+        <div class="box">
+            <div class="container">
+                <div class="row">
 
-<div class="box">
-    <div class="container">
-     	<div class="row">
-       
-                <%data.map(d=>{%>
-               
-			    <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
-               
-					<div class="box-part text-center">
-                        
-                        <!-- <i class="fa fa-behance fa-3x" aria-hidden="true"></i> -->
-                        
-						<div class="title">
-							<h3><%=d.name%></h3>
-						</div>
-                        
-						<div class="text">
-							<span><%=d.phone%><br><%=d.address%><span>
-						</div>
-                        
-						<a href="/order/make/<%=d._id%>"><button class="btn btn-primary">Order</button></a>
-                        
-					 </div>
+                    <%data.map(d=>{%>
+
+                    <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
+
+                        <div class="box-part text-center">
+
+                            <!-- <i class="fa fa-behance fa-3x" aria-hidden="true"></i> -->
+
+                            <div class="title">
+                                <h3><%=d.name%></h3>
+                            </div>
+
+                            <div class="text">
+                                <span><%=d.phone%><br><%=d.address%><span>
+                            </div>
+
+                            <a href="/order/make/<%=d._id%>"><button class="btn btn-danger">Order</button></a>
+
+                        </div>
+
+                        <div class="box-part text-center">
+
+                            <!-- <i class="fa fa-behance fa-3x" aria-hidden="true"></i> -->
+
+                            <div class="title">
+                                <h3><%=d.name%></h3>
+                            </div>
+
+                            <div class="text">
+                                <span><%=d.phone%><br><%=d.address%><span>
+                            </div>
+
+                            <a href="/order/make/<%=d._id%>"><button class="btn btn-danger">Order</button></a>
+
+                        </div>
+
+                        <div class="box-part text-center">
+
+                            <!-- <i class="fa fa-behance fa-3x" aria-hidden="true"></i> -->
+
+                            <div class="title">
+                                <h3><%=d.name%></h3>
+                            </div>
+
+                            <div class="text">
+                                <span><%=d.phone%><br><%=d.address%><span>
+                            </div>
+
+                            <a href="/order/make/<%=d._id%>"><button class="btn btn-danger">Order</button></a>
+
+                        </div>
+                    </div>
+                    <% })%>
+
+
+
                 </div>
-                <% })%>	 
-				
-				
-		
-		</div>		
-    </div>
-</div>
-<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
-integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
-crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
-integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
-crossorigin="anonymous"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
-integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
-crossorigin="anonymous"></script>
+            </div>
+        </div>
+    </center>
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+        integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+        crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
+        integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+        crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
+        integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+        crossorigin="anonymous"></script>
 
 </body>
 
