--- a/views/login.ejs
+++ b/views/login.ejs
@@ -174,28 +174,28 @@
 	</form>
 	<div class="row">
 		<div class="col col-sm-4">
-		<img src="/static/1565253651765.jpeg" width="50px">
+		<img src="/static/s1.jpeg" width="50px"  height="60px">
 		</div>
 		<div class="col col-sm-4">
-		<img src="/static/1565178931366.jpeg" width="50px">
+		<img src="/static/s2.jpeg"  height="60px" width="50px">
 		</div>
 		<div class="col col-sm-4">
-<img src="/static/1565179097360.png" width="50px">
+<img src="/static/s3.jpeg"  height="60px" width="50px">
 </div>
 <div class="col product col-sm-4 my-auto">
-		<img src="/static/1565253613714.png" width="50px">
+		<img src="/static/s4.jpeg"   height="60px" width="50px">
 		</div>
 		<div class="col product col-sm-4">
-				<img src="/static/1565258451601.jpeg" width="50px">
+				<img src="/static/s5.jpeg"  height="60px" width="50px">
 				</div>
 				<div class="col product col-sm-4">
-						<img src="/static/1565258340375.jpeg" width="50px">
+						<img src="/static/1565253613714.png"  height="60px" width="50px">
 						</div>
 						<div class="col product col-sm-4">
-								<img src="/static/1565333495630.jpg" width="50px">
+								<img src="/static/1565333495630.jpg"  height="60px" width="50px">
 								</div>
 								<div class="col product col-sm-4">
-										<img src="/static/1565258491157.jpg" width="50px">
+										<img src="/static/1565258491157.jpg"   height="60px" width="50px">
 										</div>
 				
 		
