--- a/views/showshop.ejs
+++ b/views/showshop.ejs
@@ -77,6 +77,34 @@
     <center>
         <h3>Choose Shops
         </h3>
+        <div class="row">
+                <div class="col col-sm-4">
+                <img src="/static/s1.jpeg" width="50px"  height="60px">
+                </div>
+                <div class="col col-sm-4">
+                <img src="/static/s2.jpeg"  height="60px" width="50px">
+                </div>
+                <div class="col col-sm-4">
+        <img src="/static/s3.jpeg"  height="60px" width="50px">
+        </div>
+        <div class="col product col-sm-4 my-auto">
+                <img src="/static/s4.jpeg"   height="60px" width="50px">
+                </div>
+                <div class="col product col-sm-4">
+                        <img src="/static/s5.jpeg"  height="60px" width="50px">
+                        </div>
+                        <div class="col product col-sm-4">
+                                <img src="/static/1565253613714.png"  height="60px" width="50px">
+                                </div>
+                                <div class="col product col-sm-4">
+                                        <img src="/static/1565333495630.jpg"  height="60px" width="50px">
+                                        </div>
+                                        <div class="col product col-sm-4">
+                                                <img src="/static/1565258491157.jpg"   height="60px" width="50px">
+                                                </div>
+                        
+                
+            </div>
         <div class="box">
             <div class="container">
                 <div class="row">
@@ -140,6 +168,34 @@
                 </div>
             </div>
         </div>
+        <div class="row">
+                <div class="col col-sm-4">
+                <img src="/static/s1.jpeg" width="50px"  height="60px">
+                </div>
+                <div class="col col-sm-4">
+                <img src="/static/s2.jpeg"  height="60px" width="50px">
+                </div>
+                <div class="col col-sm-4">
+        <img src="/static/s3.jpeg"  height="60px" width="50px">
+        </div>
+        <div class="col product col-sm-4 my-auto">
+                <img src="/static/s4.jpeg"   height="60px" width="50px">
+                </div>
+                <div class="col product col-sm-4">
+                        <img src="/static/s5.jpeg"  height="60px" width="50px">
+                        </div>
+                        <div class="col product col-sm-4">
+                                <img src="/static/1565253613714.png"  height="60px" width="50px">
+                                </div>
+                                <div class="col product col-sm-4">
+                                        <img src="/static/1565333495630.jpg"  height="60px" width="50px">
+                                        </div>
+                                        <div class="col product col-sm-4">
+                                                <img src="/static/1565258491157.jpg"   height="60px" width="50px">
+                                                </div>
+                        
+                
+            </div>
     </center>
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
         integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
