--- a/views/login.ejs
+++ b/views/login.ejs
@@ -41,8 +41,8 @@
 		crossorigin="anonymous"></script>
 	<style type="text/css">
 		body {
-			color: #fff;
-			background: #d47677;
+			color: rgb(251, 251, 251);
+			background: #ffffff;
 		}
 
 		.form-control {
@@ -68,11 +68,11 @@
 		}
 
 		.login-form form {
-			color: #7a7a7a;
+			color: #ffffff;
 			border-radius: 2px;
 			margin-bottom: 15px;
 			font-size: 13px;
-			background: #ececec;
+			background: #da1515;
 			box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
 			padding: 30px;
 			position: relative;
