--- a/views/showshop.ejs
+++ b/views/showshop.ejs
@@ -6,6 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Show Shop</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
     <style>
         @import url('https://fonts.googleapis.com/css?family=Josefin+Sans:100,300,400,600,700');
 
@@ -23,14 +27,14 @@
         }
 
         .box-part {
-            background: rgb(211, 191, 191);
+            background: rgb(243, 3, 3);
             border-radius: 10px;
             padding: 30px 10px;
             margin: 30px 0px;
         }
 
         .box-part:hover {
-            background: #4183D7;
+            background: rgb(214, 182, 75);
         }
 
         .box-part:hover .fa,
@@ -53,12 +57,9 @@
         }
     </style>
 
-    <link href="//netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
-    <script src="//netdna.bootstrapcdn.com/bootstrap/3.0.3/js/bootstrap.min.js"></script>
-    <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <!------ Include the above in your HEAD tag ---------->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
-        integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+  
+
+        
 
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
 
@@ -77,34 +78,30 @@
     <center>
         <h3>Choose Shops
         </h3>
-        <div class="row">
-                <div class="col col-sm-4">
-                <img src="/static/s1.jpeg" width="50px"  height="60px">
-                </div>
-                <div class="col col-sm-4">
-                <img src="/static/s2.jpeg"  height="60px" width="50px">
-                </div>
-                <div class="col col-sm-4">
-        <img src="/static/s3.jpeg"  height="60px" width="50px">
-        </div>
-        <div class="col product col-sm-4 my-auto">
-                <img src="/static/s4.jpeg"   height="60px" width="50px">
-                </div>
-                <div class="col product col-sm-4">
-                        <img src="/static/s5.jpeg"  height="60px" width="50px">
+
+             
+
+              <div id="carouselExampleControls" interval=100 class="carousel slide" data-ride="carousel">
+                    <div class="carousel-inner">
+                      <div class="carousel-item active">
+                            <img src="/static/deliverybike.png"." class="d-block w-100" alt="...">
                         </div>
-                        <div class="col product col-sm-4">
-                                <img src="/static/1565253613714.png"  height="60px" width="50px">
-                                </div>
-                                <div class="col product col-sm-4">
-                                        <img src="/static/1565333495630.jpg"  height="60px" width="50px">
-                                        </div>
-                                        <div class="col product col-sm-4">
-                                                <img src="/static/1565258491157.jpg"   height="60px" width="50px">
-                                                </div>
-                        
-                
-            </div>
+                      <div class="carousel-item">
+                        <img src="/static/vegi.jpeg" class="d-block w-100" alt="...">
+                      </div>
+                      <div class="carousel-item">
+                        <img src="/static/pul.jpeg" class="d-block w-100" alt="...">
+                      </div>
+                    </div>
+                    <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+                      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                      <span class="sr-only">Previous</span>
+                    </a>
+                    <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+                      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                      <span class="sr-only">Next</span>
+                    </a>
+                  </div>
         <div class="box">
             <div class="container">
                 <div class="row">
@@ -169,43 +166,35 @@
             </div>
         </div>
         <div class="row">
-                <div class="col col-sm-4">
-                <img src="/static/s1.jpeg" width="50px"  height="60px">
-                </div>
-                <div class="col col-sm-4">
-                <img src="/static/s2.jpeg"  height="60px" width="50px">
-                </div>
-                <div class="col col-sm-4">
-        <img src="/static/s3.jpeg"  height="60px" width="50px">
-        </div>
-        <div class="col product col-sm-4 my-auto">
-                <img src="/static/s4.jpeg"   height="60px" width="50px">
-                </div>
-                <div class="col product col-sm-4">
-                        <img src="/static/s5.jpeg"  height="60px" width="50px">
-                        </div>
-                        <div class="col product col-sm-4">
-                                <img src="/static/1565253613714.png"  height="60px" width="50px">
-                                </div>
-                                <div class="col product col-sm-4">
-                                        <img src="/static/1565333495630.jpg"  height="60px" width="50px">
-                                        </div>
-                                        <div class="col product col-sm-4">
-                                                <img src="/static/1565258491157.jpg"   height="60px" width="50px">
-                                                </div>
-                        
-                
+            <div class="col col-sm-4">
+                <img src="/static/s1.jpeg" width="50px" height="60px">
             </div>
+            <div class="col col-sm-4">
+                <img src="/static/s2.jpeg" height="60px" width="50px">
+            </div>
+            <div class="col col-sm-4">
+                <img src="/static/s3.jpeg" height="60px" width="50px">
+            </div>
+            <div class="col product col-sm-4 my-auto">
+                <img src="/static/s4.jpeg" height="60px" width="50px">
+            </div>
+            <div class="col product col-sm-4">
+                <img src="/static/s5.jpeg" height="60px" width="50px">
+            </div>
+            <div class="col product col-sm-4">
+                <img src="/static/1565253613714.png" height="60px" width="50px">
+            </div>
+            <div class="col product col-sm-4">
+                <img src="/static/1565333495630.jpg" height="60px" width="50px">
+            </div>
+            <div class="col product col-sm-4">
+                <img src="/static/1565258491157.jpg" height="60px" width="50px">
+            </div>
+
+
+        </div>
     </center>
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
-        integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
-        crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
-        integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
-        crossorigin="anonymous"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
-        integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
-        crossorigin="anonymous"></script>
+   
 
 </body>
 
