--- a/views/order.ejs
+++ b/views/order.ejs
@@ -15,12 +15,16 @@
         .card-body {
             /* height: 50px !important;
             margin-left: 2% !important; */
-            background-color: rgb(255, 255, 255);
+            background: #2980B9;  /* fallback for old browsers */
+background: -webkit-linear-gradient(to right, #FFFFFF, #FFFFFF, #2980B9);  /* Chrome 10-25, Safari 5.1-6 */
+background: linear-gradient(to right, #FFFFFF, #FFFFFF, #2980B9); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
             padding: 0px !important;
             /* padding-top:5px !important; */
         }
         body{
-            background-color: rgb(255, 0, 0)
+            background: #f12711;  /* fallback for old browsers */
+background: -webkit-linear-gradient(to right, #f5af19, #f12711);  /* Chrome 10-25, Safari 5.1-6 */
+background: linear-gradient(to right, #f5af19, #f12711); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
         }
     </style>
 </head>
