--- a/views/showshop.ejs
+++ b/views/showshop.ejs
@@ -21,7 +21,13 @@
         @import url('https://fonts.googleapis.com/css?family=Josefin+Sans:100,300,400,600,700');
 
         body {
-            background: #f2f2f2;
+            background: #FFEFBA;
+            /* fallback for old browsers */
+            background: -webkit-linear-gradient(to left, #FFFFFF, #FFEFBA);
+            /* Chrome 10-25, Safari 5.1-6 */
+            background: linear-gradient(to left, #FFFFFF, #FFEFBA);
+            /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+
             font-family: 'Josefin Sans', sans-serif;
         }
 
@@ -34,14 +40,24 @@
         }
 
         .box-part {
-            background: rgb(243, 3, 3);
+           
+            background: #D66D75;
+            /* fallback for old browsers */
+            background: -webkit-linear-gradient(to left, #E29587, rgb(243, 26, 44));
+            /* Chrome 10-25, Safari 5.1-6 */
+            background: linear-gradient(to left, #E29587, rgb(243, 26, 44));
+            /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
             border-radius: 10px;
             padding: 30px 10px;
             margin: 30px 0px;
         }
 
         .box-part:hover {
-            background: rgb(214, 182, 75);
+            background: #F00000;
+            /* fallback for old browsers */
+            background: -webkit-linear-gradient(to left, #DC281E, #F00000);
+            /* Chrome 10-25, Safari 5.1-6 */
+            background: linear-gradient(to left, #DC281E, #F00000);
         }
 
         .box-part:hover .fa,
