--- a/views/showshop.ejs
+++ b/views/showshop.ejs
@@ -25,7 +25,7 @@
             /* fallback for old browsers */
             background: -webkit-linear-gradient(to left, #FFFFFF, #FFEFBA);
             /* Chrome 10-25, Safari 5.1-6 */
-            background: linear-gradient(to left, #FFFFFF, #FFEFBA);
+            background: linear-gradient(to left, #FFFFFF, rgb(250, 250, 250));
             /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 
             font-family: 'Josefin Sans', sans-serif;
@@ -40,12 +40,12 @@
         }
 
         .box-part {
-           
-            background: #D66D75;
+
+            background: #FFEFBA;
             /* fallback for old browsers */
-            background: -webkit-linear-gradient(to left, #E29587, rgb(243, 26, 44));
+            background: -webkit-linear-gradient(to left, #FFFFFF, #FFEFBA);
             /* Chrome 10-25, Safari 5.1-6 */
-            background: linear-gradient(to left, #E29587, rgb(243, 26, 44));
+            background: linear-gradient(to left, #FFFFFF, #FFFFFF);
             /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
             border-radius: 10px;
             padding: 30px 10px;
@@ -57,7 +57,7 @@
             /* fallback for old browsers */
             background: -webkit-linear-gradient(to left, #DC281E, #F00000);
             /* Chrome 10-25, Safari 5.1-6 */
-            background: linear-gradient(to left, #DC281E, #F00000);
+            background: linear-gradient(to left, rgb(248, 75, 66), #F00000);
         }
 
         .box-part:hover .fa,
@@ -131,7 +131,7 @@
 
                     <%data.map(d=>{%>
 
-                    <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
+                    <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4">
 
                         <div class="box-part text-center">
 
