--- a/views/login.ejs
+++ b/views/login.ejs
@@ -188,21 +188,25 @@
 		<div class="col col-sm-4">
 <img src="/static/s3.jpeg"  height="60px" width="50px">
 </div>
+<div class="col product col-sm-4">
+	<img src="/static/coca.jpeg"  height="60px" width="50px">
+	</div>
 <div class="col product col-sm-4 my-auto">
 		<img src="/static/s4.jpeg"   height="60px" width="50px">
 		</div>
 		<div class="col product col-sm-4">
+			<img src="/static/fanta.png"  height="60px" width="50px">
+			</div>
+		<div class="col product col-sm-4">
 				<img src="/static/s5.jpeg"  height="60px" width="50px">
 				</div>
 				<div class="col product col-sm-4">
-						<img src="/static/1565253613714.png"  height="60px" width="50px">
+					<img src="/static/amul.jpeg"  height="60px" width="50px">
+					</div>
+					<div class="col product col-sm-4">
+						<img src="/static/her.jpeg"  height="60px" width="50px">
 						</div>
-						<div class="col product col-sm-4">
-								<img src="/static/1565333495630.jpg"  height="60px" width="50px">
-								</div>
-								<div class="col product col-sm-4">
-										<img src="/static/1565258491157.jpg"   height="60px" width="50px">
-										</div>
+					
 				
 		
 	</div>
