--- a/views/register.ejs
+++ b/views/register.ejs
@@ -13,7 +13,7 @@
 	<style type="text/css">
 		body {
 			color: #fff;
-			background: #d47677;
+			background: #ffffff;
 		}
 
 		.form-control {
@@ -39,7 +39,7 @@
 		}
 
 		.login-form form {
-			color: #7a7a7a;
+			color: #ff0000;
 			border-radius: 2px;
 			margin-bottom: 15px;
 			font-size: 13px;
@@ -121,7 +121,7 @@
 			<form action="/coustomer/register" enctype="multipart/form-data" method="post">
 				<%}%>
 		<div class="avatar">
-			<!-- <img src="/examples/images/avatar.png" alt="Avatar"> -->
+			<img src="/static/Yantranant LOGO-01.png" alt="Avatar">
 		</div>
         <h2 class="text-center">Member Login</h2>   
         <div class="form-group">
