--- a/views/showshop.ejs
+++ b/views/showshop.ejs
@@ -103,75 +103,79 @@
         </h3>
     </center>
 
-        <div id="carouselExampleControls" interval=100 class="carousel slide" data-ride="carousel">
-            <div class="carousel-inner">
-                <div class="carousel-item active">
-                    <img src="/static/deliverybike.png" height="250px" class="d-block w-100" alt="...">
-                </div>
-                <div class="carousel-item">
-                    <img src="/static/vegi.jpeg" class="d-block w-100" height="250px" alt="...">
-                </div>
-                <div class="carousel-item">
-                    <img src="/static/pul.jpeg" class="d-block w-100" height="250px" alt="...">
-                </div>
+    <div id="carouselExampleControls" interval=100 class="carousel slide" data-ride="carousel">
+        <div class="carousel-inner">
+            <div class="carousel-item active">
+                <img src="/static/deliverybike.png" height="250px" class="d-block w-100" alt="...">
             </div>
-            <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
-                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                <span class="sr-only">Previous</span>
+            <div class="carousel-item">
+                <img src="/static/vegi.jpeg" class="d-block w-100" height="250px" alt="...">
+            </div>
+            <div class="carousel-item">
+                <img src="/static/pul.jpeg" class="d-block w-100" height="250px" alt="...">
+            </div>
+        </div>
+        <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="sr-only">Previous</span>
+        </a>
+        <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="sr-only">Next</span>
+        </a>
+    </div>
+
+    <div class="row">
+
+        <%data.map(d=>{%>
+
+        <div class=" col col-lg-4 col-md-4 col-sm-4 col-xs-4">
+            <a href="/order/make/<%=d._id%>">
+
+                <img width="80px" src="/static/<%=d.img%>" />
             </a>
-            <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
-                <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                <span class="sr-only">Next</span>
-            </a>
+            <div class="title">
+                <h3><%=d.name%></h3>
+            </div>
+        </div>
+        <% })%>
+    </div>
+
+
+
+    <div class="row">
+        <div class="col col-sm-4">
+            <img src="/static/s1.jpeg" width="50px" height="60px">
+        </div>
+        <div class="col col-sm-4">
+            <img src="/static/s2.jpeg" height="60px" width="50px">
+        </div>
+        <div class="col col-sm-4">
+            <img src="/static/s3.jpeg" height="60px" width="50px">
+        </div>
+        <div class="col product col-sm-4">
+            <img src="/static/coca.jpeg" height="60px" width="50px">
+        </div>
+        <div class="col product col-sm-4 my-auto">
+            <img src="/static/s4.jpeg" height="60px" width="50px">
+        </div>
+        <div class="col product col-sm-4">
+            <img src="/static/fanta.png" height="60px" width="50px">
+        </div>
+        <div class="col product col-sm-4">
+            <img src="/static/s5.jpeg" height="60px" width="50px">
+        </div>
+        <div class="col product col-sm-4">
+            <img src="/static/amul.jpeg" height="60px" width="50px">
+        </div>
+        <div class="col product col-sm-4">
+            <img src="/static/her.jpeg" height="60px" width="50px">
         </div>
 
-        <div class="row">
-
-            <%data.map(d=>{%>
-
-            <div class=" col col-lg-4 col-md-4 col-sm-4 col-xs-4">
-                <a href="/order/make/<%=d._id%>">
-  
-                    <img width="80px" src="/static/<%=d.img%>" />
-                </a>              
-                <div class="title">
-                    <h3><%=d.name%></h3>
-                </div>
-            </div>        
-            <% })%>
-        </div>
 
 
+    </div>
 
-        <div class="row">
-            <div class="col col-sm-4">
-                <img src="/static/s1.jpeg" width="50px" height="60px">
-            </div>
-            <div class="col col-sm-4">
-                <img src="/static/s2.jpeg" height="60px" width="50px">
-            </div>
-            <div class="col col-sm-4">
-                <img src="/static/s3.jpeg" height="60px" width="50px">
-            </div>
-            <div class="col product col-sm-4 my-auto">
-                <img src="/static/s4.jpeg" height="60px" width="50px">
-            </div>
-            <div class="col product col-sm-4">
-                <img src="/static/s5.jpeg" height="60px" width="50px">
-            </div>
-            <div class="col product col-sm-4">
-                <img src="/static/1565253613714.png" height="60px" width="50px">
-            </div>
-            <div class="col product col-sm-4">
-                <img src="/static/1565333495630.jpg" height="60px" width="50px">
-            </div>
-            <div class="col product col-sm-4">
-                <img src="/static/1565258491157.jpg" height="60px" width="50px">
-            </div>
-
-
-        </div>
-   
 
 
 </body>
