--- a/views/showshop.ejs
+++ b/views/showshop.ejs
@@ -129,9 +129,9 @@
 
         <%data.map(d=>{%>
 
-        <div class=" col col-lg-4 col-md-4 col-sm-4 col-xs-4">
+        <div style="background-color:rgb(228, 220, 220)  " class=" col col-lg-4 col-md-4 col-sm-4 col-xs-4">
             <a href="/order/make/<%=d._id%>">
-
+<br>
                 <img width="80px" src="/static/<%=d.img%>" />
             </a>
             <div class="title">
@@ -141,7 +141,7 @@
         <% })%>
     </div>
 
-
+<br><br><br>
 
     <div class="row">
         <div class="col col-sm-4">
