--- a/views/order.ejs
+++ b/views/order.ejs
@@ -58,7 +58,7 @@
                                 <img alt="<%=d.img%>" src="/static/<%=d.img%>" height="50px">
                             </div>
                             <div class="col-4 " style="text-align: center;color: rgb(224, 70, 32)">
-                                <b> <%= d.name%></b>
+                                <b><div style="font-size: 15px"> <%= d.name%></div></b>
                                 <br>
                                 <br>
                                 ₹<%= d.price%>/pc.
