--- a/views/coustomerOrders.ejs
+++ b/views/coustomerOrders.ejs
@@ -13,117 +13,104 @@
 
 <body>
     <center>
-            <% include  partials/coustomerNav%>
+        <% include  partials/coustomerNav%>
 
-            <%data.map((d,i)=>{%>
+        <%data.map((d,i)=>{%>
 
-            <%=i+1%><br>
-            <small><%=d._id%></small><br>
-            Price:<b><%=d.price%></b><br>
-            Time:<em><%=d.createdAt%></em><br>
+        <%=i+1%><br>
+        <small><%=d._id%></small><br>
+        Price:<b><%=d.price%></b><br>
+        Time:<em><%=d.createdAt%></em><br>
 
-           <b> <%if(d.status==0){%>
-            Active
-
+        <b> <%if(d.status==0){%>
             <%}else if(d.status==1){%>
-            Sold
-
+            Delivered
             <%}else if(d.status==2){%>
-
-            Cancel
+            Canceled
             <%} %>
         </b>
-            <br>
-            <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#A<%=d._id%>">
-                View
-            </button>
-            <hr>
-            <br>
-            <div class="modal fade" id="A<%=d._id%>" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
-                aria-hidden="true">
-                <div class="modal-dialog" role="document">
-                    <div class="modal-content">
-                        <div class="modal-header">
-                            <h5 class="modal-title" id="exampleModalLabel">Details</h5>
-                            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                                <span aria-hidden="true">&times;</span>
-                            </button>
-                        </div>
-                        <div class="modal-body">
-
-                            <table class="table">
-                                <thead>
-                                    <tr>
-                                        <th scope="col">#</th>
-                                        <th scope="col">Name</th>
-                                        <th scope="col">Quantity</th>
-                                        <th scope="col">Rate</th>
-                                        <th scope="col">Price</th>
-
-                                    </tr>
-                                </thead>
-                                <tbody>
-                                    <%d.products.map((p,i)=>{%>
-                                    <tr>
-                                        <td><%=i+1%></td>
-                                        <td><%=p.product.name%></td>
-                                        <td><%=p.quantity%></td>
-                                        <td><%=p.product.price%></td>
-                                        <td><%=p.product.price*p.quantity%></td>
-
-
-                                        <!-- <td><%=p.quantity%></td> -->
-                                    </tr>
-
-
-                                    <% })%>
-                                </tbody>
-                            </table>
-                            <ul>
-                                <li>Name:- <%=d.sid.name%></li>
-                                <li>phone:- <%=d.sid.phone%></li>
-                                <li>address:- <%=d.sid.address%></li>
-                            </ul>
-                        </div>
-                        <div class="modal-footer">
-                            <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                        </div>
+        <br>
+        <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#A<%=d._id%>">
+            View
+        </button>
+        <hr>
+        <br>
+        <div class="modal fade" id="A<%=d._id%>" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
+            aria-hidden="true">
+            <div class="modal-dialog" role="document">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title" id="exampleModalLabel">Details</h5>
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+                    </div>
+                    <div class="modal-body">
+                        <table class="table">
+                            <thead>
+                                <tr>
+                                    <th scope="col">#</th>
+                                    <th scope="col">Name</th>
+                                    <th scope="col">Quantity</th>
+                                    <th scope="col">Rate</th>
+                                    <th scope="col">Price</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <%d.products.map((p,i)=>{%>
+                                <tr>
+                                    <td><%=i+1%></td>
+                                    <td><%=p.product.name%></td>
+                                    <td><%=p.quantity%></td>
+                                    <td><%=p.product.price%></td>
+                                    <td><%=p.product.price*p.quantity%></td>
+                                    <!-- <td><%=p.quantity%></td> -->
+                                </tr>
+                                <% })%>
+                            </tbody>
+                        </table>
+                        <ul>
+                            <li>Name:- <%=d.sid.name%></li>
+                            <li>address:- <%=d.sid.address%></li>
+                        </ul>
+                     </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
                     </div>
                 </div>
             </div>
-      
-            <%})%>
-        </center>
-   
+        </div>
 
-
-            <script>
-                function diliver(id) {
-
-                    axios.get(`/order/sold/${id}`).then(() => {
-                        window.location.href = "/order/trans/0"
-                    })
-                }
-                function cancel(id) {
-
-                    axios.get(`/order/cancel/${id}`).then(() => {
-                        window.location.href = "/order/trans/0"
-                    })
-                }
-            </script>
+        <%})%>
+    </center> 
 
 
 
+    <script>
+        function diliver(id) {
+            axios.get(`/order/sold/${id}`).then(() => {
+                window.location.href = "/order/trans/0"
+            })
+        }
+        function cancel(id) {
+            axios.get(`/order/cancel/${id}`).then(() => {
+                window.location.href = "/order/trans/0"
+            })
+        }
+    </script>
 
-            <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-                integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-                crossorigin="anonymous"></script>
-            <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
-                integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
-                crossorigin="anonymous"></script>
-            <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
-                integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
-                crossorigin="anonymous"></script>
+
+
+
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+        crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+        integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+        crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
