--- a/views/partials/coustomerNav.ejs
+++ b/views/partials/coustomerNav.ejs
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-lg navbar-light" style="background-color: red;">
-    <a class="navbar-brand" href="/product/view"><img src="/static/<%=profile.img%>" width="30px"><%=profile.name%></a>
+    <a class="navbar-brand" href="#"><img src="/static/<%=profile.img%>" width="30px"><%=profile.name%></a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
       aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
