--- a/views/inventory.ejs
+++ b/views/inventory.ejs
@@ -93,7 +93,10 @@
                   <li class="list-group-item">Total Orders :-<%=order.length%></li>
                   <li class="list-group-item">Revenue :-₹3000/-</li>
 
-
+<!-- //samriddhi center
+//owner name Sahil 
+//9098080808
+// Harda -->
                 </ul>
               </p>
             </div>
