--- a/views/inventory.ejs
+++ b/views/inventory.ejs
@@ -80,6 +80,20 @@
       </ul>
       <% })%>
       </ul>
+<br><br>
+<br><br><br><br><br><br><br><br><br><br><br>      <div class="card  ml-auto" style="width: 100%;">
+        <div class="card-body" style="width: 500px">
+
+          <p class="card-text">
+            <ul class="list-group">
+              <li class="list-group-item category-li">Main Category</li>
+              <li class="list-group-item subcategory-li">Sub-Category</li>
+              <li class="list-group-item product-li">Product</li>
+
+            </ul>
+          </p>
+        </div>
+      </div>
     </div>
     <div class="col col-md-6">
       <div class="row">
@@ -93,7 +107,7 @@
                   <li class="list-group-item">Total Orders :-<%=order.length%></li>
                   <li class="list-group-item">Revenue :-₹3000/-</li>
 
-<!-- //samriddhi center
+                  <!-- //samriddhi center
 //owner name Sahil 
 //9098080808
 // Harda -->
@@ -144,7 +158,7 @@
             <h5 class="card-title">Commission to <br>XYZ company </h5>
             <p class="card-text">
               <ul class="list-group">
-               
+
                 <li class="list-group-item">Ammount :-₹4000/-</li>
               </ul>
             </p>
@@ -153,38 +167,38 @@
       </div>
     </div>
   </div>
-  
-    <h1>Pending order</h1>
-    <table class="table" width="100%">
-      <thead class="thead-light">
-        <tr>
-          <th scope="col">#</th>
-          <th scope="col">ID</th>
-          <th scope="col">Price</th>
-          <th scope="col">Date</th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr>
-          <th scope="row">1</th>
-          <td>J63hs</td>
-          <td>5000</td>
-          <td>@Tue Aug 13 2019 12:16:01</td>
-        </tr>
-        <tr>
-          <th scope="row">2</th>
-          <td>r23tr</td>
-          <td>1000</td>
-          <td>@Tue Aug 13 2019 15:12:8</td>
-        </tr>
-        <tr>
-          <th scope="row">3</th>
-          <td>fq3r1</td>
-          <td>1200</td>
-          <td>@Tue Aug 13 2019 18:26:40</td>
-        </tr>
-      </tbody>
-    </table>
+
+  <h1>Pending order</h1>
+  <table class="table" width="100%">
+    <thead class="thead-light">
+      <tr>
+        <th scope="col">#</th>
+        <th scope="col">ID</th>
+        <th scope="col">Price</th>
+        <th scope="col">Date</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <th scope="row">1</th>
+        <td>J63hs</td>
+        <td>5000</td>
+        <td>@Tue Aug 13 2019 12:16:01</td>
+      </tr>
+      <tr>
+        <th scope="row">2</th>
+        <td>r23tr</td>
+        <td>1000</td>
+        <td>@Tue Aug 13 2019 15:12:8</td>
+      </tr>
+      <tr>
+        <th scope="row">3</th>
+        <td>fq3r1</td>
+        <td>1200</td>
+        <td>@Tue Aug 13 2019 18:26:40</td>
+      </tr>
+    </tbody>
+  </table>
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
     integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
     crossorigin="anonymous"></script>
